--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,12 @@
 PORT=3001
 DATABASE_URL=postgres://postgres:postgres@localhost:5432/saas_school
 DB_POOL_SIZE=10
+JWT_ACCESS_SECRET=your-access-secret
+JWT_REFRESH_SECRET=your-refresh-secret
+ACCESS_TOKEN_TTL=900s
+REFRESH_TOKEN_TTL=604800
+PASSWORD_RESET_TTL=1800
+EMAIL_VERIFICATION_TTL=86400
 
 # Frontend
 VITE_API_BASE_URL=http://localhost:3001
@@ -10,4 +16,3 @@ VITE_API_BASE_URL=http://localhost:3001
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=saas_school
-
