--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,12 @@ services:
       PORT: 3001
       DATABASE_URL: postgres://postgres:postgres@db:5432/saas_school
       DB_POOL_SIZE: 10
+      JWT_ACCESS_SECRET: change-me-access
+      JWT_REFRESH_SECRET: change-me-refresh
+      ACCESS_TOKEN_TTL: 900s
+      REFRESH_TOKEN_TTL: 604800
+      PASSWORD_RESET_TTL: 1800
+      EMAIL_VERIFICATION_TTL: 86400
     volumes:
       - ./backend:/app
       - /app/node_modules
