--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "express": "^5.1.0",
     "express-rate-limit": "^8.2.1",
     "jsonwebtoken": "^9.0.2",
+    "pdfkit": "^0.13.0",
     "pg": "^8.16.3",
     "uuid": "^13.0.0",
     "zod": "^4.1.12"
@@ -33,9 +34,11 @@
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.10.0",
+    "@types/pdfkit": "^0.13.7",
     "@types/pg": "^8.15.6",
     "@types/supertest": "^6.0.3",
     "@types/uuid": "^10.0.0",
+    "@eslint/js": "^9.39.0",
     "@typescript-eslint/eslint-plugin": "^8.46.3",
     "@typescript-eslint/parser": "^8.46.3",
     "eslint": "^9.39.1",
