--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,8 @@ jobs:
           node-version: '20'
           cache: 'npm'
           cache-dependency-path: backend/package-lock.json
+      - name: Install root dependencies
+        run: npm install --prefix ..
       - run: npm install
       - run: npm run lint
       - run: npm run test
@@ -35,6 +37,8 @@ jobs:
           node-version: '20'
           cache: 'npm'
           cache-dependency-path: frontend/package-lock.json
+      - name: Install root dependencies
+        run: npm install --prefix ..
       - run: npm install
       - run: npm run lint
       - run: npm run test
